[gd_scene load_steps=13 format=3 uid="uid://45y4w2s5ql6o"]

[ext_resource type="Texture2D" uid="uid://dkq346no6rvx0" path="res://đồ họa/mèo/mèo/Cat original.png" id="1_jmfhe"]
[ext_resource type="Script" path="res://4 màn hình cơ bản/thaydo.gd" id="1_of5pp"]
[ext_resource type="PackedScene" uid="uid://cq6oxjve21ju3" path="res://lặtvat/inventory_gui.tscn" id="2_nu681"]
[ext_resource type="Texture2D" uid="uid://hdjy5rtudwsu" path="res://đồ họa/skin/concacuatui.png" id="4_g3p6j"]
[ext_resource type="Texture2D" uid="uid://71o35elq5ch1" path="res://đồ họa/skin/Mèo Tiền Sử.png" id="5_leqa8"]
[ext_resource type="Texture2D" uid="uid://cabto1xijx0fr" path="res://đồ họa/skin/Magic Meow.png" id="6_hlgm5"]
[ext_resource type="Texture2D" uid="uid://cfjcyb1xmq2e1" path="res://đồ họa/skin/Mèo Lụm.png" id="7_ew6iq"]
[ext_resource type="Texture2D" uid="uid://c5xng6bjbqtdt" path="res://đồ họa/skin/Srawbemeow.png" id="8_8dery"]
[ext_resource type="Texture2D" uid="uid://bw7vv8p8sfsjt" path="res://đồ họa/skin/Wanna Swim.png" id="9_iwn08"]
[ext_resource type="Texture2D" uid="uid://ds76hsg5dnsvu" path="res://đồ họa/skin/Witchmeow.png" id="10_4urv0"]
[ext_resource type="Texture2D" uid="uid://co4jqgt7dfy0b" path="res://đồ họa/skin/Love Donuts.png" id="11_5ymvi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k4p8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jmfhe")
}],
"loop": true,
"name": &"skin ",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_g3p6j")
}],
"loop": true,
"name": &"skin 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_leqa8")
}],
"loop": true,
"name": &"skin 3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hlgm5")
}],
"loop": true,
"name": &"skin 4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ew6iq")
}],
"loop": true,
"name": &"skin 5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_8dery")
}],
"loop": true,
"name": &"skin 6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_iwn08")
}],
"loop": true,
"name": &"skin 7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_4urv0")
}],
"loop": true,
"name": &"skin 8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_5ymvi")
}],
"loop": true,
"name": &"skin 9",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_of5pp")

[node name="thoát" type="Button" parent="."]
offset_left = 35.0
offset_top = 52.0
offset_right = 200.0
offset_bottom = 101.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(299, 358)
scale = Vector2(0.432184, 0.448276)
sprite_frames = SubResource("SpriteFrames_k4p8j")
animation = &"skin 9"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryGui" parent="CanvasLayer" instance=ExtResource("2_nu681")]
offset_left = 608.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = -7.0

[node name="Button" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 715.0
offset_top = 87.0
offset_right = 813.0
offset_bottom = 226.0

[node name="Button2" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 833.0
offset_top = 86.0
offset_right = 933.0
offset_bottom = 225.0

[node name="Button3" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 953.0
offset_top = 87.0
offset_right = 1053.0
offset_bottom = 226.0

[node name="Button4" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 714.0
offset_top = 246.0
offset_right = 814.0
offset_bottom = 385.0

[node name="Button5" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 837.0
offset_top = 248.0
offset_right = 937.0
offset_bottom = 387.0

[node name="Button6" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 954.0
offset_top = 247.0
offset_right = 1054.0
offset_bottom = 386.0

[node name="Button7" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 712.0
offset_top = 404.0
offset_right = 812.0
offset_bottom = 543.0

[node name="Button8" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 835.0
offset_top = 406.0
offset_right = 935.0
offset_bottom = 545.0

[node name="Button9" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 952.0
offset_top = 405.0
offset_right = 1052.0
offset_bottom = 544.0

[connection signal="button_down" from="thoát" to="." method="_on_thoát_button_down"]
[connection signal="button_down" from="CanvasLayer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="CanvasLayer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="CanvasLayer/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="CanvasLayer/Button5" to="." method="_on_button_5_button_down"]
[connection signal="button_down" from="CanvasLayer/Button6" to="." method="_on_button_6_button_down"]
[connection signal="button_down" from="CanvasLayer/Button7" to="." method="_on_button_7_button_down"]
[connection signal="button_down" from="CanvasLayer/Button8" to="." method="_on_button_8_button_down"]
[connection signal="button_down" from="CanvasLayer/Button9" to="." method="_on_button_9_button_down"]
